<resources>
    <string name="app_name">Receipy</string>

    <!-- Specific Buttons -->
    <string name="btn_recipes">Recipe List</string>
    <string name="btn_shop">Shopping</string>
    <string name="btn_new_recipe">Create New Recipe</string>
    <string name="dtn_edit_view">View/Edit</string>
    <string name="btn_text">View/Edit</string>
    <string name="btn_new_ingredient">New Ingredient</string>
    <string name="btn_add_ingredient">Add ingredient</string>
    <string name="btn_add_recipe">Add recipe</string>

    <!-- Generic Buttons -->
    <string name="btn_delete">Delete</string>
    <string name="btn_confirm">Done</string>
    <string name="btn_back">Back</string>

    <!-- Placeholder text -->
    <string name="txt_default">Default Text</string>

    <!-- Text Hints -->
    <string name="hint_recipe_name">Recipe Name</string>

    <!-- Ingredient Field -->
    <string name="ingredient_name">Ingredient:</string>
    <string name="quantity_display">Qty:</string>
    <string name="units_display">Units:</string>
    <string name="title_activity_view_recipe">ViewRecipe</string>
    <string name="btn_new_store">New Store</string>
    <string name="store_name">Name:</string>
    <string name="hint_store">Store Name</string>

    <!-- Store Item -->
    <string name="btn_go_shopping">Go Shopping</string>
    <string name="btn_delete_store">Delete</string>
    <string name="create_store_button">Create Store</string>
    <string name="select_store_btn">Log Receipt</string>
    <string name="store_button">Stores</string>

</resources>
