<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/parent_id">

    <TextView
        android:id="@+id/store_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/txt_default"
        android:textSize="25dp" />

    <Button
        android:id="@+id/btn_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/store_name_text"
        android:layout_alignParentRight="true"
        android:text="@string/btn_go_shopping"/>


    <TextView
        android:layout_below="@id/store_name_text"
        android:id="@+id/price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_default"
        android:textSize="25dp" />


    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/btn_delete_store"
        android:layout_alignTop="@+id/price_text"
        android:visibility="gone" />

</RelativeLayout>