<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/view_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/round_button"
        android:text="@string/dtn_edit_view" />

    <TextView
        android:id="@+id/recipe_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_toStartOf="@+id/delete_btn"
        android:layout_toEndOf="@+id/view_btn"
        android:textAlignment="center"
        android:text="@string/txt_default" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_button"
        android:text="@string/btn_delete" />

</RelativeLayout>