<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingList">

    <Button
        android:id="@+id/create_store_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/ingredient_price_view"
        android:text="@string/btn_confirm" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/btn_back"
        android:layout_below="@+id/ingredient_price_view"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/ingredient_price_view"
        android:layout_below="@+id/store_name_field"
        android:layout_marginTop="20dp"></android.support.v7.widget.RecyclerView>

    <EditText
        android:id="@+id/store_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_store"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>






</RelativeLayout>