<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRecipe">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_default"
        android:textSize="25dp"
        android:id="@+id/recipe_name_txt2"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredient_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recipe_name_txt2"
        android:layout_above="@+id/confirm_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/confirm_button"
        android:text="@string/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delete_button"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"/>


    <Button
        android:id="@+id/delete_button"
        android:text="@string/btn_delete"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:layout_height="wrap_content" />


</RelativeLayout>